# LanGear

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  FSRS_WORKTREE_PLAN.md  PRACTICE_STUDY_MERGE_PLAN.md  PRD.md  PRD_BASELINE.md  PRD_BASELINE_ALI.md  PRD_MVP.md  PRD_vNext.md  README.md  REVIEW_2026-02-08.md  Untitled  docker-compose.server.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .import_progress.json  Dockerfile  IMPLEMENTATION_STATUS.md  PRD_BACKEND.md  SCHEDULER_REAPPEARANCE_TEST_PLAN.md  TESTING_REPORT.md  alembic.ini  pyproject.toml  test_startup.py
backend/app/: config.py  database.py  database_url.py  exceptions.py  logging_config.py  main.py  schema_guard.py
backend/app/adapters/: ai_feedback_adapter.py  asr_adapter.py  fsrs_adapter.py  gemini_adapter.py  oss_adapter.py  realtime_asr_adapter.py
backend/app/dependencies/: current_user.py
backend/app/evals/: __init__.py  single_feedback.py
backend/app/models/: __init__.py  card.py  deck.py  fsrs_review_log.py  invitation_code.py  review_log.py  setting.py  user.py  user_card_fsrs.py  user_card_srs.py  user_deck.py  user_deck_card.py  user_settings.py
backend/app/repositories/: card_repo.py  deck_repo.py  review_log_repo.py  settings_repo.py  (+4 more)
backend/data/: langear.db  langear.db.backup.20260209_115436
backend/datasets/: README.md
backend/migrations/: env.py
backend/scripts/: diagnose_sts.py  export_single_feedback_dataset.py  import_course_data.py  run_single_feedback_eval.py  seed_minimal_content.py  show_runtime_config.py  verify_import.py
backend/tests/: conftest.py
(+231 files in other folders)
